--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,13 +7,14 @@
       "type": "chrome",
       "request": "launch",
       "preLaunchTask": "npm: start",
-      "url": "http://localhost:4200/"
+      "url": "http://localhost:4200/",
+      "webRoot": "${workspaceFolder}"
     },
     {
       "name": "ng test",
       "type": "chrome",
       "request": "launch",
-      "preLaunchTask": "npm: test",
+      // "preLaunchTask": "npm: test",
       "url": "http://localhost:9876/debug.html"
     }
   ]
